add benthos logo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ class: title-slide, middle
 ]
 
 &lt;a href="https://www.ulaval.ca/"&gt;&lt;img src="assets/img/ul.png" width="100px"&gt;&lt;/img&gt;&lt;/a&gt;
+&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;
+&lt;img src="assets/img/labo_benthos.png" width="50px"&gt;&lt;/img&gt;
 
 ---
 
