integrate comments from Phil and Cindy

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ class: inverse, center, middle
 
 # Équipe de travail
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 ---
 
@@ -59,7 +59,7 @@ class: inverse, center, middle
 &lt;/div&gt;&lt;div class="divTableCell"&gt;
 &lt;img src="assets/img/cindy.jpeg" style="width: 250px"&gt;
 &lt;/div&gt;&lt;div class="divTableCell"&gt;
-&lt;img src="assets/img/phil.jpg" style="width: 250px"&gt;
+&lt;img src="assets/img/phil.png" style="width: 250px"&gt;
 &lt;/div&gt;&lt;/div&gt;
 &lt;div class="divTableRow"&gt;
 &lt;div class="divTableCell"&gt;&lt;b&gt;David Beauchesne&lt;/b&gt;&lt;/div&gt;&lt;div class="divTableCell"&gt;&lt;b&gt;Cindy Grant&lt;/b&gt;&lt;/div&gt;&lt;div class="divTableCell"&gt;&lt;b&gt;Philippe Archambault&lt;/b&gt;&lt;/div&gt;&lt;/div&gt;
@@ -73,7 +73,7 @@ class: inverse, center, middle
 
 # Évaluations d'effets environnementaux
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 ---
 
@@ -113,7 +113,7 @@ class: inverse, center, middle
 
 # Étapes
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 ---
 
@@ -283,24 +283,9 @@ class: inverse, center, middle
 
 class: inverse, center, middle
 
-# Portée
-
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
-
-
----
-
-# Portée
-
-À définir avec Catherine pour éviter l'overlap avec leur présentation
-
----
-
-class: inverse, center, middle
-
 # Portrait de la zone d'étude
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 
 ---
@@ -308,6 +293,10 @@ class: inverse, center, middle
 # Portrait de la zone d'étude
 
 ## Activités et facteurs de stress
+
+**Activités**: *Action qui peut entraîner un ou plusieurs facteurs de stress sur l'écosystème en cours d'évaluation.*
+
+**Facteurs de stress**: *Tout élément physique, chimique ou biologique qui, à un niveau d'intensité donné, est susceptible d'avoir des effets négatifs sur une composante valorisée.*
 
 &lt;table class="TC"&gt;
 &lt;thead&gt;
@@ -345,6 +334,8 @@ class: inverse, center, middle
 # Portrait de la zone d'étude
 
 ## Composantes valorisées
+
+*Éléments sur lesquels l'analyse d'effet cumulatif est effectuée et ayant été estimés préoccupants par les parties prenantes d'un projet.*
 
 &lt;table class="TC"&gt;
 &lt;thead&gt;
@@ -431,13 +422,15 @@ class: inverse, center, middle
 
 ## Vulnérabilité
 
+*Sensibilité des composantes valorisées aux facteurs de stress issus des activités évaluées.*
+
 &lt;table class="TC"&gt;
 &lt;thead&gt;
 &lt;tr&gt;
 &lt;th&gt;&lt;/th&gt;
 &lt;th&gt;Dragage&lt;/th&gt;
 &lt;th&gt;Ancrages&lt;/th&gt;
-&lt;th&gt;Écouements et naufrages&lt;/th&gt;
+&lt;th&gt;Échouements et naufrages&lt;/th&gt;
 &lt;th&gt;Déversements accidentels&lt;/th&gt;
 &lt;th&gt;Navigation&lt;/th&gt;
 &lt;th&gt;Engins de pêche&lt;/th&gt;
@@ -504,7 +497,13 @@ Important nombre de combinaisons &lt;i&gt;&lt;b&gt;stresseurs - composantes valo
 
 # Portrait de la zone d'étude
 
-&lt;center&gt;&lt;img src="assets/img/vulnerability.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
+## Vulnérabilité
+
+&lt;center&gt;&lt;img src="assets/img/vulnerability.png" width="60%"&gt;&lt;/img&gt;&lt;/center&gt;
+
+&lt;p style="font-size:15px; line-height:1.4; text-align: right; margin-right: 15%"&gt;
+&lt;i&gt;Beauchesne et al. 2018&lt;/i&gt;
+&lt;/p&gt;
 
 ---
 
@@ -512,94 +511,103 @@ class: inverse, center, middle
 
 # Méthode d'analyse
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 
 ---
 
-class: full, middle
+# Méthode d'analyse
+
+## Portrait de la zone d'étude
 
 &lt;center&gt;&lt;img src="assets/img/atlas.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
 
-
 ---
 
-class: full, middle
+# Méthode d'analyse
+
+## Standardisation
 
 &lt;center&gt;&lt;img src="assets/img/atlas2.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 
 ---
 
-class: full, middle
+# Méthode d'analyse
+
+&lt;br/&gt;
 
 &lt;center&gt;&lt;img src="assets/img/concept1.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
 
----
+--
 
-class: full, middle
-
-&lt;center&gt;&lt;img src="assets/img/concept2.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="assets/img/vulnerability.png" width="30%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
-class: full, middle
+# Méthode d'analyse
 
-&lt;center&gt;&lt;img src="assets/img/concept3.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
-
----
-
-class: full, middle
-
-&lt;center&gt;&lt;img src="assets/img/concept4.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="assets/img/concept2.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
-class: full, middle
+# Méthode d'analyse
 
-&lt;center&gt;&lt;img src="assets/img/concept5.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
-
----
-
-class: full, middle
-
-&lt;center&gt;&lt;img src="assets/img/concept6.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="assets/img/concept3.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
-class: full, middle
+# Méthode d'analyse
 
-&lt;center&gt;&lt;img src="assets/img/concept7.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="assets/img/concept4.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
+
+---
+
+# Méthode d'analyse
+
+&lt;center&gt;&lt;img src="assets/img/concept5.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
+
+---
+
+# Méthode d'analyse
+
+&lt;center&gt;&lt;img src="assets/img/concept6.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
+
+---
+
+# Méthode d'analyse
+
+&lt;center&gt;&lt;img src="assets/img/concept7.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 
 ---
 
-class: full, middle
+# Méthode d'analyse
+
+&lt;br/&gt;
 
 &lt;center&gt;&lt;img src="assets/img/math.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
-class: full, middle
+# Méthode d'analyse
 
-&lt;center&gt;&lt;img src="assets/img/beauchesne2018.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+## Effets cumulatifs - Saint-Laurent
 
+&lt;center&gt;&lt;img src="assets/img/beauchesne2018.png" width="90%"&gt;&lt;/img&gt;&lt;/center&gt;
 
----
-
-class: full, middle
-
-&lt;center&gt;&lt;img src="assets/img/halpern2019.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
-class: full, middle
+# Méthode d'analyse
 
-&lt;center&gt;&lt;img src="assets/img/concept8.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="assets/img/concept8.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
-class: full, middle
+# Méthode d'analyse
+
+## Exposition cumulée - Saint-Laurent
 
 &lt;center&gt;&lt;img src="assets/img/beauchesne2020.jpg" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
 
@@ -610,15 +618,9 @@ class: full, middle
 
 ---
 
-class: full, middle
+# Méthode d'analyse
 
-&lt;center&gt;&lt;img src="assets/img/concept9.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
-
----
-
-class: full, middle
-
-&lt;center&gt;&lt;img src="assets/img/concept10.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="assets/img/concept10.png" width="70%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 &lt;!-- ---
 
@@ -643,7 +645,7 @@ class: full, middle
 * Exploration efficace de multiples questions d'intérêt
 --
 
-* Identification de séquences d'effets et de chemins d'exposition
+* Identification de séquences d'effets
 --
 
 * Portrait géographique contemporain de la zone d'étude
@@ -658,10 +660,10 @@ class: full, middle
 * Évaluation relative des effets cumulatifs
 --
 
-* Ignore les interactions entre facteurs de stress
+* Assume des effets additifs entre stresseurs
 --
 
-* Assume des effets additifs entre stresseurs
+* Diffiulté de considérer des données non-spatiales
 --
 
 * Contraint par la disponibilité des données
@@ -673,7 +675,7 @@ class: inverse, center, middle
 
 # Considérations particulières
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 ---
 
@@ -685,7 +687,7 @@ class: inverse, center, middle
 * **Évaluation contemporaine**: 5-10 ans
 --
 
-* **Évaluation contrainte par les données disponibles**: aucune collecte de données nouvelles par notre équipe
+* **Évaluation contrainte par les données disponibles**: aucune collecte de données nouvelles *in situ* par notre équipe
 --
 
 * **Évaluation sectorielle**: d'autres facteurs de stress affectent assurément les composantes valorisées
@@ -696,7 +698,7 @@ class: inverse, center, middle
 
 # Collecte et gestion des données
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
 ---
 
@@ -749,7 +751,7 @@ class: inverse, center, middle
 
 # Merci de votre attention!
 
-&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-60px" size=1px width=720px&gt;&lt;/html&gt;
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
