change order of methodology presentation

--- a/index.html
+++ b/index.html
@@ -513,6 +513,20 @@ class: inverse, center, middle
 
 &lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#ffdd55' style="margin-top:-30px" size=1px width=720px&gt;&lt;/html&gt;
 
+---
+
+# Méthode d'analyse
+
+&lt;center&gt;&lt;img src="assets/img/zone_etude.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+
+--
+
+&lt;center&gt;&lt;img src="assets/img/concept1.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
+
+--
+
+&lt;center&gt;&lt;img src="assets/img/vulnerability.png" width="30%"&gt;&lt;/img&gt;&lt;/center&gt;
+
 
 ---
 
@@ -529,19 +543,6 @@ class: inverse, center, middle
 ## Standardisation
 
 &lt;center&gt;&lt;img src="assets/img/atlas2.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
-
-
----
-
-# Méthode d'analyse
-
-&lt;br/&gt;
-
-&lt;center&gt;&lt;img src="assets/img/concept1.png" width="80%"&gt;&lt;/img&gt;&lt;/center&gt;
-
---
-
-&lt;center&gt;&lt;img src="assets/img/vulnerability.png" width="30%"&gt;&lt;/img&gt;&lt;/center&gt;
 
 ---
 
